# synopsys-usb-otg

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  memory.x  openocd.cfg  openocd.gdb
.cargo/: config
.github/workflows/: ci.yml
ci/: script.sh
examples/: enumerate.rs  serial.rs  test_class.rs
src/: bus.rs  debug.rs  endpoint.rs  endpoint_map.rs  endpoint_memory.rs  lib.rs  target.rs  transition.rs
src/ral/: mod.rs  register.rs
src/ral/instances/: mod.rs  otg_fs_device_f401_f405_f407_f411_f427_f429.rs  otg_fs_global_f401_f405_f407_f411_f427_f429.rs  otg_fs_host.rs  otg_hs_device.rs  otg_hs_global.rs  otg_hs_host.rs  otg_s_pwrclk.rs
src/ral/peripherals/: mod.rs  otg_fs_device_v1.rs  otg_fs_global_v1.rs  otg_fs_host.rs  otg_fs_pwrclk.rs  otg_hs_device.rs  otg_hs_global.rs  otg_hs_host.rs
src/ral/stm32f429/: mod.rs
