[package]
name = "synopsys-usb-otg"
version = "0.3.1"
authors = ["Vadim Kaushan <admin@disasm.info>"]
description = "'usb-device' implementation for Synopsys USB OTG IP cores"
edition = "2018"
license = "MIT"
repository = "https://github.com/stm32-rs/synopsys-usb-otg"
readme = "README.md"
keywords = ["no-std", "embedded", "usb"]

[dependencies]
riscv = { version = "0.6.0", optional = true }
cortex-m = { version = "0.7.0", optional = true }
embedded-hal = "0.2.4"
vcell = "0.1.0"
usb-device = "0.2.9"

[patch.crates-io]
usb-device = { git = "https://github.com/ianrrees/usb-device", branch = "isochronous" }

[package.metadata.docs.rs]
features = ['cortex-m', 'fs']

[features]
hs = []
fs = []
xcvrdly = []
