[package]
name = "synopsys-usb-otg"
version = "0.4.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
description = "'usb-device' implementation for Synopsys USB OTG IP cores"
edition = "2018"
license = "MIT"
repository = "https://github.com/stm32-rs/synopsys-usb-otg"
readme = "README.md"
keywords = ["no-std", "embedded", "usb"]

[dependencies]
critical-section = "1.0"
embedded-hal = "0.2.4"
vcell = "0.1.0"
usb-device = "0.3"
ral-registers = "0.1.3"

[package.metadata.docs.rs]
features = ['fs']

[features]
hs = []
fs = []
xcvrdly = []
